First draft of new transcendental functions